Resolve overflow issue when focusing a step in our stepper

--- a/projects/ship-ui/ship-stepper/ship-stepper.scss
+++ b/projects/ship-ui/ship-stepper/ship-stepper.scss
@@ -1,4 +1,5 @@
 @use 'helpers' as *;
+@use '../ship-radio/ship-radio.scss';
 
 $shipStepper: true !default;
 
@@ -14,7 +15,6 @@ $shipStepper: true !default;
     flex-wrap: nowrap;
     width: 100%;
     position: relative;
-    overflow: hidden;
 
     &.primary {
       --step-c: var(--primary-6);
@@ -72,6 +72,7 @@ $shipStepper: true !default;
       cursor: pointer;
       user-select: none;
       outline: none;
+      z-index: 1;
 
       &:focus-visible .sh-radio {
         outline: 2px solid var(--primary-8);
@@ -129,17 +130,6 @@ $shipStepper: true !default;
             border-width: 0;
             background: var(--step-radio-c);
           }
-
-          &:before {
-            content: '';
-            position: absolute;
-            top: p2r(6);
-            left: -9999px;
-            z-index: -1;
-            right: 0;
-            height: p2r(4);
-            background-color: var(--step-active-c);
-          }
         }
       }
     }
@@ -153,6 +143,18 @@ $shipStepper: true !default;
       right: 0;
       height: p2r(4);
       background-color: var(--step-track-bg);
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: p2r(6);
+      left: 0;
+      z-index: 0;
+      width: var(--stepper-progress, 0%);
+      height: p2r(4);
+      background-color: var(--step-active-c);
+      transition: width 150ms ease-out;
     }
   }
 }
